# Edges_Linux_Admin_Final_Project

./: README.md
Part1_Bash_Scripting/00_userdef_script/: flow_diagram  textfile.txt  userdef
Part1_Bash_Scripting/01_2ndScript/: flow_diagram  script.sh  textfile.txt
Part2_MakeFiles_Cmake/00_MakeFile/Application/: Makefile
Part2_MakeFiles_Cmake/00_MakeFile/Modules/caesar_cipher/: caesar_cipher.mk
Part2_MakeFiles_Cmake/00_MakeFile/Modules/xor_cipher/: xor_cipher.mk
Part2_MakeFiles_Cmake/00_MakeFile/Modules/xor_cipher/src/: xor_encrypt.c
Part2_MakeFiles_Cmake/01_Cmake/Application/: CMakeLists.txt  app.c  output
Part2_MakeFiles_Cmake/01_Cmake/Modules/caesar_cipher/: CMakeLists.txt
Part2_MakeFiles_Cmake/01_Cmake/Modules/caesar_cipher/inc/: caesar_cipher.h
Part2_MakeFiles_Cmake/01_Cmake/Modules/caesar_cipher/src/: caesar_decrypt.c  caesar_encrypt.c
Part2_MakeFiles_Cmake/01_Cmake/Modules/xor_cipher/: CMakeLists.txt
Part2_MakeFiles_Cmake/01_Cmake/Modules/xor_cipher/inc/: xor_cipher.h
Part2_MakeFiles_Cmake/01_Cmake/Modules/xor_cipher/src/: xor_decrypt.c
Part3_TCP_ServerClient_Sockets/: client  client.c  client_flowdiagram.txt  flowdiagram.txt  output.txt  server  server.c
